--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "new",
+  "name": "shippinglabelmaker",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "homepage": "https://codesandbox.io/s/new",
   "main": "src/index.js",
   "dependencies": {
+    "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "react-scripts": "1.1.0"
